force-app/main/default/objects/Insight_Action__c/Insight_Action__c.object-meta.xml
<CustomObject>
    <description>SFP-6642 -- Keeps track of all actions performed on an insight</description>
    <label>Insight Action</label>
    <nameField>
        <displayFormat>IA-{0000}</displayFormat>
        <label>Insight Action Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insight Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>