force-app/main/default/objects/Insight_Action__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <description>SFP-6642 - The type of action performed on the Insight</description>
    <inlineHelpText>The type of action performed on the Insight</inlineHelpText>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity Created</fullName>
            </value>
            <value>
                <fullName>Owner Changed</fullName>
            </value>
            <value>
                <fullName>Rating</fullName>
            </value>
            <value>
                <fullName>Is Snoozed</fullName>
            </value>
            <value>
                <fullName>Disliked</fullName>
                <isActive>false</isActive>
                <label>Disliked</label>
            </value>
            <value>
                <fullName>Liked</fullName>
                <isActive>false</isActive>
                <label>Liked</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>