force-app/main/default/objects/Insight_Action__c/fields/Insight__c.field-meta.xml
<CustomField>
    <fullName>Insight__c</fullName>
    <description>SFP-6642 - The Insight that the action is performed on</description>
    <inlineHelpText>The Insight that the action is performed on</inlineHelpText>
    <label>Insight</label>
    <referenceTo>Insight__c</referenceTo>
    <relationshipLabel>Insight Actions</relationshipLabel>
    <relationshipName>Insight_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>