force-app/main/default/objects/Insight_Action__c/fields/Insight_Quality__c.field-meta.xml
<CustomField>
    <fullName>Insight_Quality__c</fullName>
    <description>SFP-6642 - The rating a user will give based on how much quality is provided by the Insight</description>
    <inlineHelpText>Select a rating for the quality provided by the Insight</inlineHelpText>
    <label>Insight Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I would like to see less of these</fullName>
            </value>
            <value>
                <fullName>I am indifferent</fullName>
            </value>
            <value>
                <fullName>Please give me more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>