force-app/main/default/objects/Insight_Action__c/fields/Insight_Status__c.field-meta.xml
<CustomField>
    <fullName>Insight_Status__c</fullName>
    <description>SFP-6642 - Indicates whether an Insight has actioned or not</description>
    <inlineHelpText>Select if any of the following has is applicable to the Insight:

Insight actioned
Insight previously actioned
Insight needed no action</inlineHelpText>
    <label>Insight Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insight actioned</fullName>
            </value>
            <value>
                <fullName>Insight previously actioned</fullName>
            </value>
            <value>
                <fullName>Insight needed no action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>