force-app/main/default/objects/Insight_Action__c/fields/Is_Snooze_Value__c.field-meta.xml
<CustomField>
    <fullName>Is_Snooze_Value__c</fullName>
    <description>Identifies whether an insight is snoozed or unsnoozed</description>
    <formula>Insight__r.Is_Snoozed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Snooze Value</label>
    <type>Checkbox</type>
</CustomField>