force-app/main/default/objects/Insight_Action__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFP-6642 - The user that has actioned this insight</description>
    <inlineHelpText>This is the user that actioned this specific insight - this can be multiple</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Insight_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>