force-app/main/default/objects/Insight_Action__c/validationRules/Insight_Status_Insight_Quality_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Insight_Status_Insight_Quality_Mandatory</fullName>
    <active>true</active>
    <description>SFP-6640 - Insight status and insight quality is mandatory when insight action is rating</description>
    <errorConditionFormula>AND(
ISPICKVAL(Action_Type__c, &quot;Rating&quot;),
OR(
ISPICKVAL(Insight_Quality__c,&quot;&quot;) , 
ISPICKVAL(Insight_Status__c,&quot;&quot;)
)
)</errorConditionFormula>
    <errorMessage>If the Action Type is Rating, you must enter an Insight Status and Insight Quality values</errorMessage>
</ValidationRule>