force-app/main/default/objects/Insight_Action__c/validationRules/User_is_a_mandatory_field.validationRule-meta.xml
<ValidationRule>
    <fullName>User_is_a_mandatory_field</fullName>
    <active>true</active>
    <description>SFP-6640 - When an insight action is created the person that created the insight must be populated in the user field</description>
    <errorConditionFormula>User__c = &quot;&quot;</errorConditionFormula>
    <errorMessage>The user field is a mandatory field on new insight action records</errorMessage>
</ValidationRule>